[tool.poetry]
name = "nornir_netmiko"
version = "0.1.1"
description = "Netmiko's plugins for nornir"
authors = ["Kirk Byers <ktbyers@twb-tech.com>"]
license = "Apache-2.0"

[tool.poetry.plugins."nornir.plugins.connections"]
"netmiko" = "nornir_netmiko.connections:Netmiko"

[tool.poetry.dependencies]
python = "^3.6"
netmiko = "^3.1.0"

[tool.poetry.dev-dependencies]
black = { version = "19.10b0", allow-prereleases = true }
mypy = "0.770"
pylama = "7.7.1"
pytest = "5.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
