[tool.poetry]
name = "nornir_netmiko"
version = "0.1.3"
description = "Netmiko's plugins for Nornir"
authors = ["Kirk Byers <ktbyers@twb-tech.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/ktbyers/nornir_netmiko"
classifiers = [
        "License :: OSI Approved :: Apache Software License",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
]

[tool.poetry.plugins."nornir.plugins.connections"]
"netmiko" = "nornir_netmiko.connections:Netmiko"

[tool.poetry.dependencies]
python = "^3.7"
netmiko = "^4.0.0"

[tool.poetry.dev-dependencies]
black = "22.3.0"
mypy = "0.942"
pylama = "7.7.1"
pytest = "6.2.5"

[build-system]
requires = ["poetry>=1.1.8"]
build-backend = "poetry.masonry.api"
